Bugzilla bug 326110: declare PR_SetSysfdTableSize and PR_GetSysfdTableMax with NSPR_API in a public header file so that they can be exported from the NSPR shared library/DLL.  r=kengert,jpierre.  Thanks to Noriko Hosoi <nhosoi@redhat.com> for the bug report.